--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:3.6.4"
+        classpath "com.android.tools.build:gradle:3.5.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -47,6 +47,11 @@ allprojects {
             {
                 google()
                 jcenter()
+                maven{
+                    url "https://maven.google.com"
+                }
+                /*카카오*/
+                maven { url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/'}
             }
 }
 
