--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ allprojects {
                 }
                 /*카카오*/
                 maven { url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/'}
+                mavenCentral()
             }
 }
 
