--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.TimerActivity"></activity>
+        <activity android:name=".ui.TimePlayActivity"></activity>
+        <activity android:name=".ui.TimerActivity" />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
