--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.TimePlayActivity"></activity>
-        <activity android:name=".ui.TimerActivity" />
-
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_key" />
@@ -25,10 +22,9 @@
         <activity android:name=".ui.WelcomActivity"></activity>
         <activity
             android:name=".ui.NicknameActivity"
-            android:windowSoftInputMode="adjustResize">
-        </activity>
-        <activity android:name=".ui.LoginActivity">
-        <activity android:name=".ui.MainActivity">
+            android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".ui.MainActivity"/>
+        <activity android:name=".ui.LoginActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
