--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,12 +19,13 @@
             android:name="com.kakao.sdk.AppKey"
             android:value="@string/kakao_app_key" />
 
-        <activity android:name=".ui.login.WelcomActivity"></activity>
+
         <activity
             android:name=".ui.login.NicknameActivity"
             android:windowSoftInputMode="adjustResize" />
         <activity android:name=".ui.main.MainActivity"/>
-        <activity android:name=".ui.login.LoginActivity" >
+        <activity android:name=".ui.login.LoginActivity" />
+        <activity android:name=".ui.login.WelcomActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
