--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,18 @@ buildscript {
         //lifecycle_version
         lifecycle_version = '2.2.0'
 
+        //gson_version
+        gson_version = '2.8.6'
+
+        //rxandoird_version
+        rxandoird_version = '3.0.0'
+
+        //rxjava_version
+        rxjava_version = '3.0.6'
+
+        //retrofit_version
+        retrofit_version = '2.9.0'
+
     }
     repositories {
         google()
