--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,10 +5,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".kakaologin.GlobalApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:name=".kakaologin.GlobalApplication"
         android:label="@string/app_name"
+        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -19,13 +20,12 @@
             android:name="com.kakao.sdk.AppKey"
             android:value="@string/kakao_app_key" />
 
-
         <activity
             android:name=".ui.login.NicknameActivity"
             android:windowSoftInputMode="adjustResize" />
-        <activity android:name=".ui.main.MainActivity"/>
-        <activity android:name=".ui.login.LoginActivity" />
-        <activity android:name=".ui.login.WelcomActivity">
+        <activity android:name=".ui.main.MainActivity" />
+        <activity android:name=".ui.login.WelcomActivity" />
+        <activity android:name=".ui.login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
