--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     package="com.mashup.dionysos">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
 
     <application
         android:name=".kakaologin.GlobalApplication"
@@ -25,6 +29,8 @@
             android:windowSoftInputMode="adjustResize" />
         <activity android:name=".ui.login.WelcomActivity" />
         <activity android:name=".ui.main.MainActivity" />
+        <activity android:name=".ui.timelapse.TimeLapseActivity"/>
+
         <activity android:name=".ui.login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
