--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         compile_sdk_version = 30
         build_tools_version = '30.0.0'
 
-        min_sdk_version = 21
+        min_sdk_version = 24
         target_sdk_version = 30
 
         //kotlin
@@ -24,6 +24,9 @@ buildscript {
 
         //exoplayer
         exoplayer_version = '2.11.7'
+
+        //mobile_ffmpeg
+        mobile_ffmpeg_version = "4.4"
 
         //lifecycle_version
         lifecycle_version = '2.2.0'
