--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ buildscript {
 
         logging_version = '4.9.0'
 
+        koin_version = '2.2.0-rc-2'
     }
     repositories {
         google()
@@ -54,7 +55,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:3.5.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath "org.koin:koin-gradle-plugin:$koin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
